--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             </div>
             <div class="feature-img">
               <div class="feature-img--item">
-                <img src="./images/Mode=Light.png" alt="" />
+                <img src="./images/Mode=Light.png" class="img-feature" alt="" />
               </div>
               <div class="feature-img--item">
-                <img src="./images/Android.png" alt="" />
+                <img src="./images/Android.png" class="img-feature" alt="" />
               </div>
             </div>
           </div>
