--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./images/logo.png" />
     <script src="https://kit.fontawesome.com/ee30c4883a.js" crossorigin="anonymous"></script>
     <title>Landing page</title>
   </head>
