--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       rel="stylesheet"
     />
     <link rel="icon" href="./images/logo.png" />
-    <script src="https://kit.fontawesome.com/ee30c4883a.js" crossorigin="anonymous"></script>
     <title>Landing page</title>
   </head>
   <body>
@@ -85,7 +84,7 @@
             </div>
             <div class="feature-img">
               <div class="feature-img--item">
-                <img src="./images/Mode=Light.png" class="img-feature" alt="" />
+                <img src="./images/Iphone.png" class="img-feature" alt="" />
               </div>
               <div class="feature-img--item">
                 <img src="./images/Android.png" class="img-feature" alt="" />
@@ -98,12 +97,8 @@
         <div class="container footer__inner">
           <ul class="footer__menu-list">
             <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link btn btn--border btn--act">
-                <i class="fab fa-apple"></i>
-                <div class="footer__menu-link--desc">
-                  <p>Download on the</p>
-                  <h3>App Store</h3>
-                </div>
+              <a href="#" class="footer__menu-link">
+                <img src="./images/googleplay.png" class="img-footer" alt="" />
               </a>
               <h2 class="footer__menu-title">SoluToday IOS</h2>
               <p class="footer__menu-desc">
@@ -112,12 +107,8 @@
               </p>
             </li>
             <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link btn btn--border btn--act">
-                <i class="fab fa-google-play"></i>
-                <div class="footer__menu-link--desc">
-                  <p>GET IT ON</p>
-                  <h3>CH PLAY</h3>
-                </div>
+              <a href="#" class="footer__menu-link">
+                <img src="./images/appstore.png" class="img-footer" alt="" />
               </a>
               <h2 class="footer__menu-title">SoluToday Android</h2>
               <p class="footer__menu-desc">
@@ -129,5 +120,7 @@
         </div>
       </footer>
     </div>
+
+    <script src="https://kit.fontawesome.com/ee30c4883a.js" crossorigin="anonymous"></script>
   </body>
 </html>
