--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <img src="./images/Iphone.png" class="img-feature" alt="" />
               </div>
               <div class="feature-img--item">
-                <img src="./images/Image.png" class="img-feature" alt="" />
+                <img src="./images/Android.png" class="img-feature" alt="" />
               </div>
             </div>
           </div>
