--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
               <h1 class="feature__info-title">The outdoor environment is age-appropriate</h1>
               <p class="feature__info-desc">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam numquam culpa dolores
-                quisquam eos eaque iste est, tempore iure. Natus!
+                quisquam eos.
               </p>
             </div>
+
             <div class="feature-img">
               <div class="feature-img--item">
                 <img src="./images/Iphone.png" class="img-feature" alt="" />
