--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@
           <nav class="header__menu">
             <ul class="header__menu-list">
               <li class="header__menu-item">
-                <a href="#" class="header__menu-link">FAQS</a>
+                <a href="#" class="header__menu-link">Hướng dẫn</a>
               </li>
               <li class="header__menu-item">
-                <a href="#" class="header__menu-link">Home it works</a>
+                <a href="#" class="header__menu-link">Liên hệ</a>
               </li>
+              <!-- <li class="header__menu-item">
+                <a href="#" class="header__menu-link">Phiên bản Web</a>
+              </li> -->
               <li class="header__menu-item">
-                <a href="#" class="header__menu-link">Contact us</a>
-              </li>
-              <li class="header__menu-item">
-                <a href="#" class="header__menu-link btn btn--shadow btn--rounded">Login</a>
+                <a href="#" class="header__menu-link btn btn--shadow btn--rounded">Phiên bản Web</a>
               </li>
             </ul>
           </nav>
 
-          <label for="nav__mobile__input" class="toggle-icon"><i class="fas fa-bars"></i></label>
+          <label for="nav__mobile__input" class="toggle-icon"
+            ><img src="./images/menu-outline.png" alt=""
+          /></label>
 
           <input type="checkbox" class="nav__input" id="nav__mobile__input" />
 
@@ -47,25 +49,31 @@
 
           <nav class="header__menu-mobile">
             <label for="nav__mobile__input" class="header__menu-mobile-close">
-              <i class="fas fa-times"></i>
+              <img src="./images/close-outline.png" alt="" />
             </label>
             <ul class="header__menu-mobile-list">
               <li class="header__menu-mobile-item">
-                <a href="#" class="header__menu-mobile-link"><i class="far fa-bell"></i> FAQs</a>
-              </li>
-              <li class="header__menu-mobile-item">
-                <a href="#" class="header__menu-mobile-link"
-                  ><i class="fas fa-hand-holding-usd"></i> Home it works</a
+                <a href="#" class="header__menu-mobile-link">
+                  <div class="header__menu-mobile-image">
+                    <img src="./images/book-open-outline.png" alt="" />
+                  </div>
+                  <p>Hướng dẫn</p></a
                 >
               </li>
               <li class="header__menu-mobile-item">
-                <a href="#" class="header__menu-mobile-link"
-                  ><i class="fas fa-book"></i> Contact us</a
+                <a href="#" class="header__menu-mobile-link">
+                  <div class="header__menu-mobile-image">
+                    <img src="./images/phone-call-outline.png" alt="" />
+                  </div>
+                  <p>Liên hệ</p></a
                 >
               </li>
               <li class="header__menu-mobile-item">
-                <a href="#" class="header__menu-mobile-link"
-                  ><i class="fas fa-sign-in-alt"></i> Login</a
+                <a href="#" class="header__menu-mobile-link btn btn--border btn--act">
+                  <!-- <div class="header__menu-mobile-image">
+                    <img src="./images/monitor-outline.png" alt="" />
+                  </div> -->
+                  <p>Phiên bản Web</p></a
                 >
               </li>
             </ul>
@@ -85,10 +93,10 @@
 
             <div class="feature-img">
               <div class="feature-img--item">
-                <img src="./images/Iphone.png" class="img-feature" alt="" />
+                <img src="./images/Andoird1.png" class="img-feature" alt="" />
               </div>
               <div class="feature-img--item">
-                <img src="./images/Android.png" class="img-feature" alt="" />
+                <img src="./images/Iphone1.png" class="img-feature" alt="" />
               </div>
             </div>
           </div>
@@ -121,7 +129,7 @@
         </div>
       </footer>
     </div>
-
+    <script src="https://unpkg.com/eva-icons"></script>
     <script src="https://kit.fontawesome.com/ee30c4883a.js" crossorigin="anonymous"></script>
   </body>
 </html>
