--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 
             <div class="feature-img">
               <div class="feature-img--item">
-                <img src="./images/Andoird1.png" class="img-feature" alt="" />
+                <img src="./images/Iphone2.png" class="img-feature" alt="" />
               </div>
               <div class="feature-img--item">
-                <img src="./images/Iphone1.png" class="img-feature" alt="" />
+                <img src="./images/Android3.png" class="img-feature" alt="" />
               </div>
             </div>
           </div>
