--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="wrapper">
       <header class="header">
         <div class="container header__inner">
-          <a href="index.html">
+          <a href="index.html" class="header-logo">
             <img src="./images/logo.png" alt="" />
           </a>
           <nav class="header__menu">
@@ -81,6 +81,7 @@
         </div>
       </header>
       <section class="feature">
+        <div id="particles-js"></div>
         <div class="container">
           <div class="feature__item">
             <div class="feature__info">
@@ -129,6 +130,120 @@
         </div>
       </footer>
     </div>
+    <!-- <script src="particlesjs-config.json"></script> -->
+    <script src="particles.js"></script>
+    <script>
+      particlesJS('particles-js', {
+        particles: {
+          number: {
+            value: 6,
+            density: {
+              enable: true,
+              value_area: 800
+            }
+          },
+          color: {
+            value: '#f29595'
+          },
+          shape: {
+            type: 'polygon',
+            stroke: {
+              width: 0,
+              color: '#000'
+            },
+            polygon: {
+              nb_sides: 6
+            },
+            image: {
+              src: 'img/github.svg',
+              width: 100,
+              height: 100
+            }
+          },
+          opacity: {
+            value: 0.3,
+            random: true,
+            anim: {
+              enable: false,
+              speed: 1,
+              opacity_min: 0.1,
+              sync: false
+            }
+          },
+          size: {
+            value: 80,
+            random: false,
+            anim: {
+              enable: true,
+              speed: 10,
+              size_min: 40,
+              sync: false
+            }
+          },
+          line_linked: {
+            enable: false,
+            distance: 200,
+            color: '#ffffff',
+            opacity: 1,
+            width: 2
+          },
+          move: {
+            enable: true,
+            speed: 8,
+            direction: 'none',
+            random: false,
+            straight: false,
+            out_mode: 'out',
+            bounce: false,
+            attract: {
+              enable: false,
+              rotateX: 600,
+              rotateY: 1200
+            }
+          }
+        },
+        interactivity: {
+          detect_on: 'canvas',
+          events: {
+            onhover: {
+              enable: false,
+              mode: 'grab'
+            },
+            onclick: {
+              enable: false,
+              mode: 'push'
+            },
+            resize: true
+          },
+          modes: {
+            grab: {
+              distance: 400,
+              line_linked: {
+                opacity: 1
+              }
+            },
+            bubble: {
+              distance: 400,
+              size: 40,
+              duration: 2,
+              opacity: 8,
+              speed: 3
+            },
+            repulse: {
+              distance: 200,
+              duration: 0.4
+            },
+            push: {
+              particles_nb: 4
+            },
+            remove: {
+              particles_nb: 2
+            }
+          }
+        },
+        retina_detect: false
+      });
+    </script>
     <script src="https://unpkg.com/eva-icons"></script>
     <script src="https://kit.fontawesome.com/ee30c4883a.js" crossorigin="anonymous"></script>
   </body>
